Fcurve snapping and autoclamp error #38817

Closed
opened 2014-02-25 00:07:25 +01:00 by Daniel Salazar · 10 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC

Blender Version

Broken: 4903544

Short description of error

Snapping is incorrect and autoclamp makes handles be at the same point where the CV is

Exact steps for others to reproduce the error

Error 1: Load fcurve_bug.blend and move the selected CV

Error 2: Select all CVs and press V > Autoclamp

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC **Blender Version** Broken: 4903544 **Short description of error** Snapping is incorrect and autoclamp makes handles be at the same point where the CV is **Exact steps for others to reproduce the error** Error 1: Load [fcurve_bug.blend](https://archive.blender.org/developer/F78812/fcurve_bug.blend) and move the selected CV Error 2: Select all CVs and press V > Autoclamp
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Campbell Barton self-assigned this 2014-02-27 06:42:45 +01:00

Confirmed, looks like theres more then one bug here, checking on possible fix.

Confirmed, looks like theres more then one bug here, checking on possible fix.

Attached possible fix, however this changes how handles are calculated (ignoring vertical distance), Which is what you need (I think) if you want handles to behave the same with Y range of 0-1 and 0-10000.

Also committed a fix for another bug this report exposed: 4622fc418e

Attached possible fix, however this changes how handles are calculated (ignoring vertical distance), Which is what you need (I think) if you want handles to behave the same with Y range of 0-1 and 0-10000. Also committed a fix for another bug this report exposed: 4622fc418e

This issue was referenced by blender/blender-addons-contrib@ba08031783

This issue was referenced by blender/blender-addons-contrib@ba08031783a1aebc4559351454e3de1a9629b37a

This issue was referenced by ba08031783

This issue was referenced by ba08031783a1aebc4559351454e3de1a9629b37a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ba08031783.

Closed by commit ba08031783.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38817
No description provided.