Fix T38817: FCurve autoclamp error

Animating large values with auto handles didn't work well,
(large variations on the Y axis would shrink handles).